--- a/notes/Midterm_Studyguide.Rmd
+++ b/notes/Midterm_Studyguide.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Midterm study guide"
 author: "MATH 456"
-output: html_document
+output: pdf_document
 ---
 
 ```{r results="asis", echo=FALSE}
