--- a/wk10.Rmd
+++ b/wk10.Rmd
@@ -14,21 +14,23 @@ source("C:/Github/MATH456/stylesheets/custom.R")
 ### Notes and Materials
 * Lec 07: Inference on Categorical Data [[PDF]](notes/lec07_CategoricalDataAnalysis.pdf)[[HTML]](notes/lec07_CategoricalDataAnalysis.html)
 
-##### On Your Own - Review of tests for one  sample proportions (Before Monday)
+
+### Monday 3/21/16
+* PCA Practice (Afifi 14.11)
+
+##### On Your Own - Review of tests for one  sample proportions (Before Wednesday)
 * OpenIntro Statistics [Free PDF Textbook](https://www.openintro.org/stat/textbook.php) Chapter 6
 * Open Intro Lab on categorical data [[HTML]](notes/OI_Inf_for_categorical_data/html) (Uses the `openintro` package)
 
-### Monday 3/21/16
+### Wednesday 3/23/16
 * Review one and two sample proportions. 
 
-### Wednesday 3/23/16
-* Contingency tables and measures of association
 
 ### Friday 3/25/16
-* Work on on your own questions
+* Contingency tables and measures of association
 
 
 ## Looking Ahead
 * Logistic Regression
-* Classifiers
+
 
